[metadata]
name = fastapi_aad_auth
author = David Pugh
author_email = djpugh@gmail.com
description = Provide Azure Active Directory Authentication for FastAPI
long_descripion = file:README.rst
long_description_content_type = text/x-rst
url = https://djpugh.github.io/fastapi_aad_auth
classifiers =
        Environment :: Console
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Internet :: WWW/HTTP :: WSGI
        Programming Language :: Python :: 3
        Intended Audience :: Developers
    	License :: OSI Approved :: MIT License
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Natural Language :: English
provides =
    fastapi_aad_auth
;can't use this as we are setting requirements in setup.py which breaks the wheel
;requires-dist = setuptools

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find:
python_requires = >=3

[options.package_data]
* =  *.rst
     requirements.txt
     *.ini
     *.cfg
     *.whl
     *.html
     *.css
     *.woff
     *.otf
     *.svg
     *.eot
     *.ttf
     *.png
     *.css.map

[options.packages.find]
where=src

# Flake 8 config
[flake8]

# Ignore errrors
# E501: Ignore line length
# E226: Missing whitespace around arithmetic operator
# Other default ignores: E121, E123, E126, E24, E704
ignore = E501,E226,E121,E123,E126,E24,E704,D417
count = True
exclude =
    # No need to traverse our git directory
    .git,
    .\.git,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/source/conf.py,
    ./docs/source/conf.py,
    # This contains built code
    build/*,
    .\build\lib\*,
    .\build\*,
    # This contains the builds that we don't want to check
    dist,
    # This contains the docs
    docs/*,
    core_python_build/docs/*,
    # Compiled files
    *.pyc,
    # Docs files
    *.rst,
    *.md,
    *.png,
    .tox,
    examples,
    tests,
    versioneer.py,
    .venv/*,
    .tox/*
show_source = True
statistics = True
import-order-style=google
application-import-names=fastapi_aad_auth
docstring-convention=google


[versioneer]
VCS = git
style = pep440
versionfile_source = src/fastapi_aad_auth/_version.py
versionfile_build = fastapi_aad_auth/_version.py
tag_prefix = 
parentdir_prefix = fastapi_aad_auth-

[mypy]
mypy_path = src/
plugins = pydantic.mypy
ignore_missing_imports = True

[mypy-fastapi_aad_auth._version]
ignore_errors = True
